--- a/main.tex
+++ b/main.tex
@@ -11,8 +11,47 @@
 
 \begin{document}
 
-\input{abstract.tex}
+\makeatletter
+\thispagestyle{empty}
+\vspace*{\fill}
+\begin{center}
+\begin{minipage}{0.75\linewidth}
+	\centering
+  %University logo
+	%\includegraphics[width=0.3\linewidth]{logo.pdf}
+	%\rule{0.4\linewidth}{0.15\linewidth}\par
+%Thesis title
+	{\Huge \@title \par}
+	\vspace{1em}
+	{\Large CPSC 449 Undergraduate Honours Thesis \par}
+	\vspace{1em}
+  {by \par}
+%Author's name
+  % \@author doesn't work...
+	{\huge Jonathan Chan \par}
+%Degree
+  \vspace{2em}
+	{\Large A thesis submitted in partial fulfillment of the requirements for the degree of \par}
+	\vspace{1em}
+  {\huge Bachelor of Science (Honours) \par}
+	\vspace{2em}
+  {in \par}
+	\vspace{2em}
+  {\Large The Faculty of Science \par}
+	\vspace{1em}
+  {\Large Department of Computer Science \par}
+  \vspace{1em}
+  {\Large The University of British Columbia (Vancouver) \par}
+%Date
+  \vspace{1em}
+	{\Large December 2019}
+\end{minipage}
+\end{center}
+\vspace*{\fill}
+\clearpage
+\makeatother
 
+\input{abstract.tex}
 \maketitle
 
 %\tableofcontents
