Update on Overleaf.

--- a/biblio.bib
+++ b/biblio.bib
@@ -155,7 +155,7 @@ url="https://doi.org/10.1007/1-4020-2335-9_9"
    pages={1--11}
 }
 
-@article{impl,
+@misc{impl,
     title={ionathanch/coq: Initial Release},
     DOI={10.5281/zenodo.3516517},
     publisher={Zenodo},
