--- a/definitions/inference/metafunctions.tex
+++ b/definitions/inference/metafunctions.tex
@@ -22,5 +22,5 @@
 \end{tabular}
 
 \caption{Summary of metafunctions used in the size inference algorithm}
-\label{fig:metafunctions2}
+\label{fig:inference-metafunctions}
 \end{figure*}
