--- a/definitions/notation/inductives.tex
+++ b/definitions/notation/inductives.tex
@@ -5,7 +5,7 @@
 \Sigma &\Coloneqq \square \mid \Sigma (\textit{Ind})
 \end{align*}
 \begin{equation*}
-\Delta_p \vdash \langle I_i\ \dom{\Delta_p}: \Pi\Delta_{a_i}. \varw_i \rangle \coloneqq \langle c_j: \Pi\Delta_j. I_{k_j}\ \dom{\Delta_p}\ \overline{t}_j \rangle
+\Delta_p \vdash \langle I_i\ \dom{\Delta_p}: \Pi\Delta_i. \varw_i \rangle \coloneqq \langle c_j: \Pi\Delta_j. I_j\ \dom{\Delta_p}\ \overline{t}_j \rangle
 \end{equation*}
 \caption{Inductive definitions and signature}
 \label{fig:inductives}
