--- a/definitions/typing-rules/metafunctions.tex
+++ b/definitions/typing-rules/metafunctions.tex
@@ -2,15 +2,15 @@
 \centering
 
 \begin{align*}
-    &\indtype{\Sigma}{I_k} = \Pi \Delta_p . \Pi \Delta_{a_k} . \varw_k \\
+    &\indtype{\Sigma}{I_k} = \Pi \Delta_p . \Pi \Delta_k . \varw_k \\
     &\constrtype{\Sigma}{c_\ell}{\overline{s_i}} = \\
-    &\qquad \Pi \Delta_p . \Pi \Delta_\ell \overline{[I_i^\infty \coloneqq I_i^{s_i}]} . I_{k_\ell}^{\hat{s}_{k_\ell}}\ \dom{\Delta_p}\ \overline{t}_\ell \\
+    &\qquad \Pi \Delta_p . \Pi \Delta_\ell \overline{[I_i^\infty \coloneqq I_i^{s_i}]} . I_{\ell}^{\hat{s}_{\ell}}\ \dom{\Delta_p}\ \overline{t}_\ell \\
     &\motivetype{\Sigma}{\overline{p}}{\varw}{I_k^s} = \\
-    &\qquad \Pi \Delta_{a_k}[\dom{\Delta_p} \coloneqq \overline{p}] . \Pi \_ : I_k^s\ \overline{p}\ \dom{\Delta_{a_k}} . \varw \\
+    &\qquad \Pi \Delta_k[\dom{\Delta_p} \coloneqq \overline{p}] . \Pi \_ : I_k^s\ \overline{p}\ \dom{\Delta_k} . \varw \\
     &\branchtype{\Sigma}{\overline{p}}{c_\ell}{\overline{s_i}}{\wp} = \\
     &\qquad \Pi \Delta_\ell \overline{[I_i^\infty \coloneqq I_i^{s_i}]}[\dom{\Delta_p} \coloneqq \overline{p}] . \wp\ \overline{t}_\ell\ (c_\ell\ \overline{p}\ \dom{\Delta_\ell}) \\
     &\textit{where}\quad k \in \overline{\imath}, \ell \in \overline{\jmath}, \\
-    &\quad\qquad\big(\Delta_p \vdash \langle I_i\ \_ : \Pi\Delta{a_i} . \varw_i \rangle \coloneqq \langle c_j : \Pi \Delta_j . I_{k_j}\ \_\ \overline{t}_j \big \rangle) \in \Sigma
+    &\quad\qquad\big(\Delta_p \vdash \langle I_i\ \_ : \Pi\Delta_i . \varw_i \rangle \coloneqq \langle c_j : \Pi \Delta_j . I_j\ \_\ \overline{t}_j \rangle \big) \in \Sigma
 \end{align*}
 
 \caption{Metafunctions for typing rules}
