--- a/definitions/typing-rules/pos-neg.tex
+++ b/definitions/typing-rules/pos-neg.tex
@@ -37,18 +37,16 @@
 
 \hfill\spacer
 
-\AxiomC{$\upsilon \notin \SV{\overline{a}}$}
+\AxiomC{$\upsilon \notin \SV{I^s\overline{a}}$}
 \AxiomC{$I\ \text{inductive}$}
-\AxiomC{$\upsilon \neq \lfloor s \rfloor$}
-\TrinaryInfC{$\upsilon \neg I^s \overline{a}$}
+\BinaryInfC{$\upsilon \neg I^s \overline{a}$}
 \DisplayProof
 
 \hfill\spacer
 
-\AxiomC{$\upsilon \notin \SV{\overline{a}}$}
+\AxiomC{$\upsilon \notin \SV{I^s\overline{a}}$}
 \AxiomC{$I\ \text{coinductive}$}
-\AxiomC{$\upsilon \neq \lfloor s \rfloor$}
-\TrinaryInfC{$\upsilon \pos I^s \overline{a}$}
+\BinaryInfC{$\upsilon \pos I^s \overline{a}$}
 \DisplayProof
 
 \caption{Positivity/negativity of stage variables in terms}
