--- a/definitions/inference/algorithm.tex
+++ b/definitions/inference/algorithm.tex
@@ -1,6 +1,22 @@
 \begin{figure*}[!ph]
 \centering
 
+\begin{flushleft}
+\fbox{$\cgg \vdash T^\circ \Leftarrow T \rightsquigarrow C, T$}
+\end{flushleft}
+
+\begin{mathpar}
+\infer[\defrule{a-check}]{
+    \cgg \vdash e^\circ \Leftarrow u \rightsquigarrow C_1 \cup t \preceq u, e
+}{
+    \cgg \vdash e^\circ \rightsquigarrow C_1, e \Rightarrow t
+}
+\end{mathpar}
+
+\begin{flushleft}
+\fbox{$\cgg \vdash T^\circ \rightsquigarrow C, T \Rightarrow T$}
+\end{flushleft}
+
 \begin{tabular}{c c}
     \infer[\defrule{a-var-assum}]{
         \cgg \vdash x \rightsquigarrow C, x \Rightarrow \Gamma(x)
@@ -31,12 +47,6 @@
 \infer[\defrule{a-univ}]{
     \cgg \vdash \varw \rightsquigarrow C, \varw \Rightarrow \axiom{\varw}
 }{}
-\and
-\infer[\defrule{a-check}]{
-    \cgg \vdash e^\circ \Leftarrow u \rightsquigarrow C_1 \cup t \preceq u, e
-}{
-    \cgg \vdash e^\circ \rightsquigarrow C_1, e \Rightarrow t
-}
 \hva \and
 \infer[\defrule{a-prod}]{
     \cgg \vdash \Pi x: t^\circ. u^\circ \rightsquigarrow C_2, \Pi x: t. u \Rightarrow \rules{\varw_1}{\varw_2}
@@ -68,21 +78,21 @@
 }
 \hva \and
 \infer[\defrule{a-ind}]{
-    \cgg \vdash I_k \rightsquigarrow C, I_k^\upsilon \Rightarrow \indtype{\Sigma}{I_k}
+    \cgg \vdash I \rightsquigarrow C, I^\upsilon \Rightarrow \indtype{\Sigma}{I}
 }{
     \upsilon = \fresh{1}
 }
 \and
 \infer[\defrule{a-ind-star}]{
-    \cgg \vdash I_k^* \rightsquigarrow C, I_k^\rho \Rightarrow \indtype{\Sigma}{I_k}
+    \cgg \vdash I^* \rightsquigarrow C, I^\rho \Rightarrow \indtype{\Sigma}{I}
 }{
     \rho = \freshi{1}
 }
 \hva \and
 \infer[\defrule{a-constr}]{
-    \cgg \vdash c_\ell \rightsquigarrow C, c_\ell \Rightarrow \constrtype{\Sigma}{c_\ell}{\overline{\upsilon}}
+    \cgg \vdash c \rightsquigarrow C, c \Rightarrow \constrtype{\Sigma}{c}{\overline{\upsilon}}
 }{
-    \overline{\upsilon} = \fresh{\inds{c_\ell}}
+    \overline{\upsilon} = \fresh{\inds{c}}
 }
 \hva \and
 \inferrule*[right=\defrule{a-case}]{
@@ -118,31 +128,10 @@
 }{
     \cgg \vdash \cofix{m}{f_k}{t_k^\circ}{e_k} \rightsquigarrow C_4, \cofix{m}{f_k}{|t_k|^*}{e_k} \Rightarrow t_m
 }
-\hva \and
-\infer[\defrule{a-global-empty}]{
-    \square \rightsquigarrow \square
-}{}
-\and
-\infer[\defrule{a-global-assum}]{
-    \Gamma_G^\circ(\text{Assum}\ x:t^\circ.) \rightsquigarrow \Gamma_G(\text{Assum}\ x:|t|^\infty.)
-}{
-    \Gamma_G^\circ \rightsquigarrow \Gamma_G \\
-    \emptyset, \Gamma_G, \square \vdash t^\circ \rightsquigarrow \_, t \Rightarrow \varw
-}
-\hva \and
-\inferrule*[right=\defrule{a-global-def}]{
-    \Gamma_G^\circ \rightsquigarrow \Gamma_G \\
-    \emptyset, \Gamma_G, \square \vdash t^\circ \rightsquigarrow C_1, t \Rightarrow \varw \\\\
-    C_1, \Gamma_G, \square \vdash e^\circ \rightsquigarrow \_, e \Rightarrow u \\
-    \_ = u \preceq t \\
-    \mathcal{P} \coloneqq \mathcal{P} \cup \getposvars{t}{u}
-}{
-    \Gamma_G^\circ(\text{Def}\ x:t^\circ \coloneqq e^\circ.) \rightsquigarrow \Gamma_G(\text{Def}\ x:|t|^\iota \coloneqq |e|^\infty.)
-}
 \end{mathpar}
 
 \caption{Size inference algorithm}
-\label{fig:algorithm1}
+\label{fig:algorithm}
 \end{figure*}
 
 % Use this to get rid of the page number that overlaps with the rules
