--- a/definitions/notation/metavariables.tex
+++ b/definitions/notation/metavariables.tex
@@ -3,7 +3,7 @@
 \begin{align*}
 e, a, p, \wp &\in T[\alpha] \ \text{(expressions)} & \upsilon, \rho &\in \mathcal{V} \cup \mathcal{P} & \varw &\in U \\
 t, u, v  &\in T[\alpha] \ \text{(types)} & V &\in \mathbb{P}(\mathcal{V}) & I &\in \mathcal{I}\\
-f, g, h, x, y, z &\in \mathcal{X} & s &\in S & c &\in \mathcal{C}
+f, g, h, x, y, z &\in \mathcal{X} & r, s &\in S & c &\in \mathcal{C}
 \end{align*}
 \caption{Metavariables}
 \label{fig:metavariables}
