--- a/pre.tex
+++ b/pre.tex
@@ -1,9 +1,3 @@
-\title{Endowing Coq with Sized Types}
-\title{Coq Sized Types Matter}
-\title{Sizing Up Coq's Types}
-\title{A Bigger, Sized Coq}
-\title{SuccCoq: Successor Sized Types in the Calculus of (Co)Inductive Constructions}
-\title{The Rise of Coq with Sized Types}
 \title{Practical Sized Typing for Coq}
 
 \author{Jonathan Chan}
@@ -13,11 +7,11 @@
 }
 \email{jon@alumni.ubc.ca}
 
-\author{William J. Bowman}
-\affiliation{
-  \institution{University of British Columbia}
-}
-\email{wilbowma@cs.ubc.ca}
+%\author{William J. Bowman}
+%\affiliation{
+%  \institution{University of British Columbia}
+%}
+%\email{wilbowma@cs.ubc.ca}
 
 \usepackage{amsmath}
 \usepackage{amsfonts}
@@ -26,12 +20,8 @@
 \usepackage{minted}
 \usepackage{bussproofs}
 \usepackage{mathpartir}
-\usepackage{cuted}
-\usepackage{hyphenat}
-\usepackage{stackengine}
 \usepackage{xspace}
 \usepackage[shortcuts]{extdash}
-\usepackage{soul}
 \usepackage{enumitem}
 \usepackage[title]{appendix}
 \usepackage{hyperref}
@@ -39,8 +29,6 @@
 \usepackage{doi}
 \usepackage[pdf]{graphviz}
 
-% Change list indent to 1 em so that bullets are flush with paragraph indents
-\setlist{leftmargin=1em}
 % Use \autoref for references with prefixes
 \def\sectionautorefname{Section}
 \def\subsectionautorefname{Subsection}
@@ -108,13 +96,9 @@
 \newcommand{\pos}{\ \text{pos}\ }
 \renewcommand{\neg}{\ \text{neg}\ }
 % other
-\newcommand{\inmaterials}{in the anonymous supplementary materials}
 \newcommand{\spacer}{\vspace{1ex}}
 % (co) words
 \newcommand{\coinductive}{(co)\-inductive\xspace}
 \newcommand{\corecursive}{(co)\-recursive\xspace}
 \newcommand{\cofixpoint}{(co)\-fix\-point\xspace}
 \newcommand{\cofixpoints}{(co)\-fix\-points\xspace}
-
-\hyphenation{para-metrized}
-\hyphenation{re-duc-tion}
