--- a/definitions/typing-rules/typing.tex
+++ b/definitions/typing-rules/typing.tex
@@ -105,9 +105,9 @@
 
 \begin{tabular}{c c}
 \hspace{-3em}
-\AxiomC{$t_k \approx \Pi \Delta_{1k} . \Pi x_k : I_k^{\upsilon_k}\ \overline{a}_k. \Pi \Delta_{2k}. u_k \qquad \|\Delta_k\| = n_m - 1$}
+\AxiomC{$t_k \approx \Pi \Delta_{1k} . \Pi x_k : I_k^{\upsilon_k}\ \overline{a}_k. \Pi \Delta_{2k} . u_k \qquad \|\Delta_{1k}\| = n_m - 1$}
 \noLine
-\UnaryInfC{$\upsilon_k \pos \Delta_{1k}, \Delta_{2k}, u_k \qquad \upsilon_k \notin \SV{\Gamma, \Delta_k, \overline{a}_k, e_k} \qquad \upsilon_k, \lfloor s \rfloor \in \mathcal{P}$}
+\UnaryInfC{$\upsilon_k \pos \Delta_{1k}, \Delta_{2k}, u_k \qquad \upsilon_k \notin \SV{\Gamma, \overline{a}_k, e_k} \qquad \upsilon_k, \lfloor s \rfloor \in \mathcal{P}$}
 \noLine
 \UnaryInfC{$\sgg \vdash t_k : \varw_k \qquad \sgg \overline{(f_k : t_k)} \vdash e_k : t_k[\upsilon_k \coloneqq \hat{\upsilon}_k]$}
 \RightLabel{\defrule{fix}}
