--- a/main.tex
+++ b/main.tex
@@ -96,7 +96,7 @@ Before we delve into the details of what sized and full terms are, or how infere
 \autoref{fig:terms-general} presents the syntax of \lang, whose terms are parametrized over a set of annotations $\alpha$, which indicate the kind of annotations (if any) that appear on the term; details will be provided shortly. We use $\mathcal{X}$ for term variable names, $\mathcal{V}$ for stage variable names, $\mathcal{P}$ for position stage variable names, $\mathcal{I}$ for \coinductive type names, and $\mathcal{C}$ for \coinductive constructor names. (The distinction between $\mathcal{V}$ and $\mathcal{P}$ will be important when typing \cofixpoints and global definitions). We use the overline $\overline{\,\cdot\,}$ to denote a sequence of some construction: for instance, $\overline{\mathcal{V}}$ is a sequence of stage variables $\mathcal{V} \dots 
 \mathcal{V}$.
 
-In the syntax, the brackets $\langle \cdot \rangle$ delimit a vector of comma-separated constructions. In the grammar of \autoref{fig:terms-general}, the construction inside the brackets denotes the pattern of the elements in the vector. For instance, the branches of a case analysis are $\langle C \Rightarrow T, \dots, C \Rightarrow T \rangle$. Finally, we use $i, j, k, \ell, m, n$ to represent strictly positive integers.
+In the syntax, the brackets $\langle \cdot \rangle$ delimit a vector of comma-separated constructions. In the grammar of \autoref{fig:terms-general}, the construction inside the brackets denotes the pattern of the elements in the vector. For instance, the branches of a case analysis are $\langle C \Rightarrow T, \dots, C \Rightarrow T \rangle$. Finally, we use $i, j, k, \ell, m, n$ to represent strictly positive integers for indexing; consequently, we use 1-based indexing.
 
 \lang resembles the usual CIC, but there are some important differences:
 
