--- a/pre.tex
+++ b/pre.tex
@@ -17,7 +17,7 @@
 \usepackage{amsfonts}
 \usepackage{mathtools}
 \usepackage{stmaryrd}
-\usepackage{minted}
+\usepackage[finalizecache,cachedir=.]{minted}
 \usepackage{bussproofs}
 \usepackage{mathpartir}
 \usepackage{xspace}
